<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".Main2Activity_nivel2">

    <TextView
        android:id="@+id/tiempo"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="275dp"
        android:layout_marginTop="54dp"
        android:text="00:00:00"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:text="@string/JugadorNombre"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="63dp"
        android:text="@string/TotalScore"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_manzana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:text="@string/Et_Vida"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/Vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="95dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageViewOpe"
        android:layout_width="96dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="36dp"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/imageViewNum1"
        android:layout_width="116dp"
        android:layout_height="231dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="259dp"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageViewNum2"
        android:layout_width="139dp"
        android:layout_height="227dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="248dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="24dp"
        app:srcCompat="@drawable/cero" />

    <Button
        android:id="@+id/button"
        android:layout_width="169dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/fondoboton"
        android:onClick="comprobar"
        android:text="@string/BotonOpe"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/editText_Resultado"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="144dp"
        android:layout_toStartOf="@+id/button"
        android:ems="10"
        android:hint="@string/et_respuesta"
        android:inputType="number" />


</RelativeLayout>